@startuml

title __PRESENTER's Class Diagram__\n

  namespace Presenter {
    class Presenter.MainPresenter {
        + MainPresenter()
    }
  }
  

  namespace Presenter {
    class Presenter.RecommendFagmentPresenter {
        - handler : Handler
        + RecommendFagmentPresenter()
        + getFooddata()
    }
  }
  

  Presenter.MainPresenter .up.|> Contract.MainContract.MainActivityPresenter
  Presenter.MainPresenter -up-|> Base.RxBasePresenter
  Presenter.MainPresenter o-- Base.DataManager : mDataManager
  Presenter.RecommendFagmentPresenter .up.|> Contract.RecommendFragmentContract.Presenter
  Presenter.RecommendFagmentPresenter -up-|> Base.RxBasePresenter
  Presenter.RecommendFagmentPresenter o-- Base.DataManager : mDataManager


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
